// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders with expected snapshot for desktop 1`] = `
<Styled(ul)>
  <Styled(a)
    data-test="burger-logo"
    href="http://www.google.com"
  >
    <Logo
      small={false}
    />
  </Styled(a)>
  <LeftMenuItem
    isMobileMenu={false}
    item={
      Object {
        "id": 2,
        "name": "test",
        "sections": Array [],
      }
    }
    key="2"
    onMenuSelected={[MockFunction]}
    selectedMenuId={2}
  />
</Styled(ul)>
`;

exports[`render renders with expected snapshot for mobile 1`] = `
<Styled(ul)>
  <Styled(a)
    data-test="burger-logo"
    href="http://www.google.com"
  >
    <Logo
      small={true}
    />
  </Styled(a)>
  <LeftMenuItem
    isMobileMenu={true}
    item={
      Object {
        "id": 2,
        "name": "test",
        "sections": Array [],
      }
    }
    key="2"
    onMenuSelected={[MockFunction]}
    selectedMenuId={2}
  />
</Styled(ul)>
`;
